stripe/paypal complete

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     />
     <link rel="apple-touch-icon" href="" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://www.paypal.com/sdk/js?client-id=AavmhZefvr4iCRd1cbn4qMfC9oIOKd6h3I32tFwnTUOMdeBQ7OWvYrf77pcnZ-PAHp9MLKZutJv2ScZ7&currency=USD&disable-funding=credit,card"></script>
 
     <title>JLC Serves</title>
   </head>
